Datastore impl for Model Branch APIs
